# ChatBot

./: CMakeLists.txt  ReadmeUML.md  main.cpp
Models/Application/: ApplicationManager.cpp  ApplicationManager.h
Models/Client/: Client.cpp  Client.h
Models/Client/Admin/: Admin.cpp  Admin.h
Models/Client/User/: User.cpp  User.h
Models/Database/: Database.h
Models/Database/DatabaseManager/: DatabaseManager.cpp  DatabaseManager.h
Models/Database/DatabaseManager/Controller/: AdminController.h  LetterController.h  UserController.h
Models/Exception/Client/: ClientException.cpp  ClientException.h
Models/Exception/Letter/: LetterException.cpp  LetterException.h
Models/Function/: IConsumer.h  IRunnable.h  ISerializable.h
Models/Item/: Item.cpp  Item.h
Models/Item/AgeItem/: AgeItem.cpp  AgeItem.h
Models/Item/AuthorizeItem/: AuthorizeItem.cpp  AuthorizeItem.h
Models/Item/HelloWorldItem/: HelloWorldItem.cpp  HelloWorldItem.h
Models/Item/LoginItem/: LoginItem.cpp  LoginItem.h
Models/Item/NameItem/: NameItem.cpp  NameItem.h
Models/Item/NewLetterItem/: NewLetterItem.cpp  NewLetterItem.h
Models/Item/NewLetterToItem/: NewLetterToItem.cpp  NewLetterToItem.h
Models/Item/PasswordItem/: PasswordItem.cpp  PasswordItem.h
Models/Item/ReceivedLetterFromItem/: ReceivedLetterFromItem.cpp  ReceivedLetterFromItem.h
Models/Item/ReceivedLettersItem/: ReceivedLettersItem.cpp  ReceivedLettersItem.h
Models/Item/RegisterItem/: RegisterItem.cpp  RegisterItem.h
Models/Item/SentLetterToItem/: SentLetterToItem.cpp  SentLetterToItem.h
Models/Item/SentLettersItem/: SentLettersItem.cpp  SentLettersItem.h
Models/Item/SignInItem/: SignInItem.cpp  SignInItem.h
Models/Item/SignUpItem/: SignUpItem.cpp  SignUpItem.h
Models/Item/SurnameItem/: SurnameItem.cpp  SurnameItem.h
Models/Iterator/: Iterator.h
Models/Letter/: Letter.cpp  Letter.h
Models/Menu/: Menu.cpp  Menu.h
Models/Menu/AuthorizationMenu/: AuthorizationMenu.cpp  AuthorizationMenu.h
Models/Menu/AuthorizationMenu/SignInMenu/: SignInMenu.cpp  SignInMenu.h
Models/Menu/AuthorizationMenu/SignUpMenu/: SignUpMenu.cpp  SignUpMenu.h
Models/Menu/HelloWorldMenu/: HelloWorldMenu.cpp  HelloWorldMenu.h
Models/Menu/MainMenu/: MainMenu.cpp  MainMenu.h
Models/Menu/MainMenu/NewLetterMenu/: NewLetterMenu.cpp  NewLetterMenu.h
Models/Menu/MainMenu/ReceivedLettersMenu/: ReceivedLettersMenu.cpp  ReceivedLettersMenu.h
Models/Menu/MainMenu/SentLettersMenu/: SentLettersMenu.cpp  SentLettersMenu.h
Models/Tools/Color/: Color.cpp  Color.h
Models/Tools/Key/: Key.h
Models/Vector/: Vector.h
